[tool.poetry]
name = "advertyzement_assignment"
version = "0.1.0"
description = ""
authors = ["Anuj Singh Solanki <anujsinghsolanki1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
ariadne = "^0.14.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Cors = "^3.0.10"
mysqlclient = "^2.1.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
setuptools = "^61.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
